--- a/Python/anaconda/FundHold.ipynb
+++ b/Python/anaconda/FundHold.ipynb
@@ -2,20 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6750451a",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.9.5 64-bit' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/usr/local/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pandas version: 1.4.3\n",
+      "akshare version: 1.7.17\n"
      ]
     }
    ],
@@ -30,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "f4c047bc",
    "metadata": {},
    "outputs": [
@@ -197,7 +195,7 @@
        "[451 rows x 7 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.5 (default, May  4 2021, 03:36:27) \n[Clang 12.0.0 (clang-1200.0.32.29)]"
   },
   "vscode": {
    "interpreter": {
