--- a/Python/anaconda/Porfolio.ipynb
+++ b/Python/anaconda/Porfolio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -99,20 +99,23 @@
      "text": [
       "初始资金: 1000000\n",
       "回测期间：20190101:20221220\n",
-      "总资金: 1000000\n",
-      "净收益: 0\n"
+      "总资金: 1041576.95\n",
+      "净收益: 41576.95\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'Cerebro' object has no attribute '_exactbars'",
+     "ename": "ImportError",
+     "evalue": "cannot import name 'warnings' from 'matplotlib.dates' (/usr/local/lib/python3.9/site-packages/matplotlib/dates.py)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 18\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m总资金: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mround\u001b[39m(port_value, \u001b[39m2\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     16\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m净收益: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mround\u001b[39m(pnl, \u001b[39m2\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 18\u001b[0m cerebro\u001b[39m.\u001b[39;49mplot(style\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mcandlestick\u001b[39;49m\u001b[39m'\u001b[39;49m)  \u001b[39m# 画图\u001b[39;00m\n",
-      "File \u001b[0;32m/usr/local/lib/python3.9/site-packages/backtrader/cerebro.py:970\u001b[0m, in \u001b[0;36mCerebro.plot\u001b[0;34m(self, plotter, numfigs, iplot, start, end, width, height, dpi, tight, use, **kwargs)\u001b[0m\n\u001b[1;32m    936\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mplot\u001b[39m(\u001b[39mself\u001b[39m, plotter\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, numfigs\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, iplot\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, start\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, end\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    937\u001b[0m          width\u001b[39m=\u001b[39m\u001b[39m16\u001b[39m, height\u001b[39m=\u001b[39m\u001b[39m9\u001b[39m, dpi\u001b[39m=\u001b[39m\u001b[39m300\u001b[39m, tight\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, use\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    938\u001b[0m          \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m    939\u001b[0m     \u001b[39m'''\u001b[39;00m\n\u001b[1;32m    940\u001b[0m \u001b[39m    Plots the strategies inside cerebro\u001b[39;00m\n\u001b[1;32m    941\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    968\u001b[0m \u001b[39m    ``tight``: only save actual content and not the frame of the figure\u001b[39;00m\n\u001b[1;32m    969\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m--> 970\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_exactbars \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    971\u001b[0m         \u001b[39mreturn\u001b[39;00m\n\u001b[1;32m    973\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m plotter:\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Cerebro' object has no attribute '_exactbars'"
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[41], line 19\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m总资金: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mround\u001b[39m(port_value, \u001b[39m2\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     17\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m净收益: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mround\u001b[39m(pnl, \u001b[39m2\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 19\u001b[0m cerebro\u001b[39m.\u001b[39;49mplot(style\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mcandlestick\u001b[39;49m\u001b[39m'\u001b[39;49m)  \u001b[39m# 画图\u001b[39;00m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.9/site-packages/backtrader/cerebro.py:974\u001b[0m, in \u001b[0;36mCerebro.plot\u001b[0;34m(self, plotter, numfigs, iplot, start, end, width, height, dpi, tight, use, **kwargs)\u001b[0m\n\u001b[1;32m    971\u001b[0m     \u001b[39mreturn\u001b[39;00m\n\u001b[1;32m    973\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m plotter:\n\u001b[0;32m--> 974\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m plot\n\u001b[1;32m    975\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mp\u001b[39m.\u001b[39moldsync:\n\u001b[1;32m    976\u001b[0m         plotter \u001b[39m=\u001b[39m plot\u001b[39m.\u001b[39mPlot_OldSync(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.9/site-packages/backtrader/plot/__init__.py:42\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[39mexcept\u001b[39;00m:\n\u001b[1;32m     37\u001b[0m         \u001b[39m# if another backend has already been loaded, an exception will be\u001b[39;00m\n\u001b[1;32m     38\u001b[0m         \u001b[39m# generated and this can be skipped\u001b[39;00m\n\u001b[1;32m     39\u001b[0m         \u001b[39mpass\u001b[39;00m\n\u001b[0;32m---> 42\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mplot\u001b[39;00m \u001b[39mimport\u001b[39;00m Plot, Plot_OldSync\n\u001b[1;32m     43\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mscheme\u001b[39;00m \u001b[39mimport\u001b[39;00m PlotScheme\n",
+      "File \u001b[0;32m/usr/local/lib/python3.9/site-packages/backtrader/plot/plot.py:44\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mfinance\u001b[39;00m \u001b[39mimport\u001b[39;00m plot_candlestick, plot_ohlc, plot_volume, plot_lineonclose\n\u001b[1;32m     43\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mformatters\u001b[39;00m \u001b[39mimport\u001b[39;00m (MyVolFormatter, MyDateFormatter, getlocator)\n\u001b[0;32m---> 44\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m locator \u001b[39mas\u001b[39;00m loc\n\u001b[1;32m     45\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mmulticursor\u001b[39;00m \u001b[39mimport\u001b[39;00m MultiCursor\n\u001b[1;32m     46\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mscheme\u001b[39;00m \u001b[39mimport\u001b[39;00m PlotScheme\n",
+      "File \u001b[0;32m/usr/local/lib/python3.9/site-packages/backtrader/plot/locator.py:35\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdates\u001b[39;00m \u001b[39mimport\u001b[39;00m RRuleLocator \u001b[39mas\u001b[39;00m RRLocator\n\u001b[1;32m     33\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdates\u001b[39;00m \u001b[39mimport\u001b[39;00m AutoDateFormatter \u001b[39mas\u001b[39;00m ADFormatter\n\u001b[0;32m---> 35\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdates\u001b[39;00m \u001b[39mimport\u001b[39;00m (HOURS_PER_DAY, MIN_PER_HOUR, SEC_PER_MIN,\n\u001b[1;32m     36\u001b[0m                               MONTHS_PER_YEAR, DAYS_PER_WEEK,\n\u001b[1;32m     37\u001b[0m                               SEC_PER_HOUR, SEC_PER_DAY,\n\u001b[1;32m     38\u001b[0m                               num2date, rrulewrapper, YearLocator,\n\u001b[1;32m     39\u001b[0m                               MicrosecondLocator, warnings)\n\u001b[1;32m     41\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdateutil\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mrelativedelta\u001b[39;00m \u001b[39mimport\u001b[39;00m relativedelta\n\u001b[1;32m     42\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'warnings' from 'matplotlib.dates' (/usr/local/lib/python3.9/site-packages/matplotlib/dates.py)"
      ]
     }
    ],
@@ -123,9 +126,10 @@
     "data = bt.feeds.PandasData(dataname=stock_hfq_df, fromdate=start_date, todate=end_date) # 加载数据\n",
     "cerebro.adddata(data) # 将数据传入回测系统\n",
     "cerebro.addstrategy(MyStrategy) # 将交易策略加载到回测系统中\n",
-    "\n",
     "start_cash = 1000000\n",
     "cerebro.broker.setcash(start_cash) # 设置初始资本\n",
+    "cerebro.broker.setcommission(commission=0.002)  # 设置交易手续费为 0.2%\n",
+    "cerebro.run()  # 运行回测系统\n",
     "\n",
     "port_value = cerebro.broker.getvalue()  # 获取回测结束后的总资金\n",
     "pnl = port_value - start_cash  # 盈亏统计\n",
