--- a/Python/anaconda/Demo.ipynb
+++ b/Python/anaconda/Demo.ipynb
@@ -51,6 +51,7 @@
    "outputs": [],
    "source": [
     "# 开盘比前日收盘跌2%及以上的日期\n",
+    "# shift：+ 数据下移 - 数据上移\n",
     "stock_record[(stock_record['open'] - stock_record['close'].shift(1))/stock_record['close'].shift(1) <= -0.02].index"
    ]
   },
@@ -60,7 +61,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 从2010年1月1日开始，每月第一个交易日买入1手，每年最后一个交易日卖出所有，到今天的收益\n"
+    "# 从2010年1月1日开始，每月第一个交易日买入1手，每年最后一个交易日卖出所有，到今天的收益\n",
+    "stock_record = stock_record['2010-01': '2023-12']\n",
+    "stock_record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 每个月的和\n",
+    "stock_record.resample('M').sum()\n",
+    "# 每个月的第一天的数据 M可以写成MS。虽然结果的index是每个月的最后一天，实际取的第一天数据\n",
+    "# last()即最后一天的数据\n",
+    "stock_monthly = stock_record.resample('M').first()\n",
+    "# 每年的最后一天的数据，注意最后一行数据的合理性：最后一天到了没\n",
+    "stock_yearly = stock_record.resample('A').last()[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/cz/xr6426gj23x4j3ky4jk7gg1w0000gn/T/ipykernel_85845/3863114358.py:3: FutureWarning: Indexing a DataFrame with a datetimelike index using a single string to slice the rows, like `frame[string]`, is deprecated and will be removed in a future version. Use `frame.loc[string]` instead.\n",
+      "  cost += stock_monthly[str(year)]['open'].sum() * 100\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "27027074.0"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cost = 0\n",
+    "for year in range(2010, 2023):\n",
+    "  cost += stock_monthly[str(year)]['open'].sum() * 100\n",
+    "# cost = stock_monthly['open'].sum() * 100\n",
+    "cost"
    ]
   }
  ],
