--- a/Python/anaconda/AutomaticInvestmentPlan定投.ipynb
+++ b/Python/anaconda/AutomaticInvestmentPlan定投.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "              dtype='datetime64[ns]', name='date', length=320, freq=None)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "              dtype='datetime64[ns]', name='date', freq=None)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "[3157 rows x 4 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,38 +275,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "114595.0\n",
+      "38805.99999999988\n",
+      "-34597.0\n",
+      "-212105.0\n",
+      "235077.0\n",
+      "119706.00000000023\n",
+      "356268.99999999977\n",
+      "1587607.0\n",
+      "-722498.0\n",
+      "1489347.000000001\n",
+      "3237056.0\n",
+      "788085.0\n",
+      "-332204.0\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "5724810.000000001"
+       "6665144.000000001"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cost = 0\n",
+    "total = 0\n",
     "# range, 不包括end\n",
     "for year in range(2010, 2024):\n",
     "  # 花费，支出\n",
-    "  cost += -(stock_monthly.loc[str(year)]['open'].sum() * 100)\n",
+    "  cost = stock_monthly.loc[str(year)]['open'].sum() * 100\n",
     "  hold = len(stock_monthly.loc[str(year)]) * 100\n",
-    "  # 今年的数值是没有的！！如果不排除今年的，会报错\n",
+    "  # 今年的卖出数值是没有的！！如果不排除今年的，会报错\n",
     "  if year != 2023:\n",
     "    sell = stock_yearly.loc[str(year)]['open'][0] * hold\n",
-    "    cost += sell\n",
-    "cost"
+    "    total += sell - cost\n",
+    "    print(sell - cost)\n",
+    "total"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -320,12 +340,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.5 (default, May  4 2021, 03:36:27) \n[Clang 12.0.0 (clang-1200.0.32.29)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ae8463592a6bf03d7a6a525450dfda08cf8ced71de467d9e16b891204533c235"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
