--- a/Python/anaconda/DoubleMovingAverage双均线.ipynb
+++ b/Python/anaconda/DoubleMovingAverage双均线.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
        "      <th>open</th>\n",
        "      <th>close</th>\n",
        "      <th>high</th>\n",
@@ -62,45 +61,39 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2010-01-04</td>\n",
+       "      <th>2010-01-04</th>\n",
        "      <td>1402.93</td>\n",
        "      <td>1355.31</td>\n",
        "      <td>1406.45</td>\n",
        "      <td>1353.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2010-01-05</td>\n",
+       "      <th>2010-01-05</th>\n",
        "      <td>1357.66</td>\n",
        "      <td>1331.21</td>\n",
        "      <td>1366.48</td>\n",
        "      <td>1298.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2010-01-06</td>\n",
+       "      <th>2010-01-06</th>\n",
        "      <td>1328.27</td>\n",
        "      <td>1307.70</td>\n",
        "      <td>1328.27</td>\n",
        "      <td>1297.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2010-01-07</td>\n",
+       "      <th>2010-01-07</th>\n",
        "      <td>1307.70</td>\n",
        "      <td>1293.00</td>\n",
        "      <td>1316.51</td>\n",
        "      <td>1278.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2010-01-08</td>\n",
+       "      <th>2010-01-08</th>\n",
        "      <td>1284.18</td>\n",
        "      <td>1290.06</td>\n",
        "      <td>1298.88</td>\n",
@@ -112,43 +105,37 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3089</th>\n",
-       "      <td>2023-01-03</td>\n",
+       "      <th>2023-01-03</th>\n",
        "      <td>2351.27</td>\n",
        "      <td>2443.91</td>\n",
        "      <td>2456.91</td>\n",
        "      <td>2326.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3090</th>\n",
-       "      <td>2023-01-04</td>\n",
+       "      <th>2023-01-04</th>\n",
        "      <td>2434.16</td>\n",
        "      <td>2533.30</td>\n",
        "      <td>2549.55</td>\n",
        "      <td>2421.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3091</th>\n",
-       "      <td>2023-01-05</td>\n",
+       "      <th>2023-01-05</th>\n",
        "      <td>2546.30</td>\n",
        "      <td>2559.30</td>\n",
        "      <td>2601.56</td>\n",
        "      <td>2541.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3092</th>\n",
-       "      <td>2023-01-06</td>\n",
+       "      <th>2023-01-06</th>\n",
        "      <td>2562.55</td>\n",
        "      <td>2582.06</td>\n",
        "      <td>2598.31</td>\n",
        "      <td>2559.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3093</th>\n",
-       "      <td>2023-01-09</td>\n",
+       "      <th>2023-01-09</th>\n",
        "      <td>2603.19</td>\n",
        "      <td>2611.31</td>\n",
        "      <td>2624.31</td>\n",
@@ -156,28 +143,28 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3094 rows × 5 columns</p>\n",
+       "<p>3094 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            date     open    close     high      low\n",
-       "date                                                \n",
-       "0     2010-01-04  1402.93  1355.31  1406.45  1353.55\n",
-       "1     2010-01-05  1357.66  1331.21  1366.48  1298.88\n",
-       "2     2010-01-06  1328.27  1307.70  1328.27  1297.12\n",
-       "3     2010-01-07  1307.70  1293.00  1316.51  1278.30\n",
-       "4     2010-01-08  1284.18  1290.06  1298.88  1275.37\n",
-       "...          ...      ...      ...      ...      ...\n",
-       "3089  2023-01-03  2351.27  2443.91  2456.91  2326.89\n",
-       "3090  2023-01-04  2434.16  2533.30  2549.55  2421.15\n",
-       "3091  2023-01-05  2546.30  2559.30  2601.56  2541.42\n",
-       "3092  2023-01-06  2562.55  2582.06  2598.31  2559.30\n",
-       "3093  2023-01-09  2603.19  2611.31  2624.31  2565.80\n",
+       "               open    close     high      low\n",
+       "date                                          \n",
+       "2010-01-04  1402.93  1355.31  1406.45  1353.55\n",
+       "2010-01-05  1357.66  1331.21  1366.48  1298.88\n",
+       "2010-01-06  1328.27  1307.70  1328.27  1297.12\n",
+       "2010-01-07  1307.70  1293.00  1316.51  1278.30\n",
+       "2010-01-08  1284.18  1290.06  1298.88  1275.37\n",
+       "...             ...      ...      ...      ...\n",
+       "2023-01-03  2351.27  2443.91  2456.91  2326.89\n",
+       "2023-01-04  2434.16  2533.30  2549.55  2421.15\n",
+       "2023-01-05  2546.30  2559.30  2601.56  2541.42\n",
+       "2023-01-06  2562.55  2582.06  2598.31  2559.30\n",
+       "2023-01-09  2603.19  2611.31  2624.31  2565.80\n",
        "\n",
-       "[3094 rows x 5 columns]"
+       "[3094 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +172,8 @@
    "source": [
     "stock_record = ak.stock_zh_a_hist(symbol='000001', start_date='20100101', adjust='hfq').iloc[:, :5]\n",
     "stock_record.columns = ['date', 'open', 'close', 'high', 'low']\n",
-    "stock_record.index.name = 'date'\n",
+    "# 指定列索引，要重新赋值。如果是从csv文件读取，默认第一列是index\n",
+    "stock_record = stock_record.set_index('date')\n",
     "stock_record"
    ]
   }
