--- a/Python/anaconda/DoubleMovingAverage双均线.ipynb
+++ b/Python/anaconda/DoubleMovingAverage双均线.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,32 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "date\n",
-       "2015-02-13    1\n",
-       "2015-03-13   -1\n",
-       "2015-05-18    1\n",
-       "2015-05-27   -1\n",
-       "2015-06-01    1\n",
-       "             ..\n",
-       "2022-06-30   -1\n",
-       "2022-07-14    1\n",
-       "2022-08-31   -1\n",
-       "2022-09-23    1\n",
-       "2022-11-15   -1\n",
-       "Length: 96, dtype: int64"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# stock_record['cross'] = np.nan\n",
     "# for i in range(0, len(stock_record)):\n",
@@ -135,22 +112,25 @@
     "#     stock_record.loc[date, 'cross'] = -1\n",
     "# stock_record = stock_record.dropna()\n",
     "\n",
-    "sr1 = pd.Series(1, index=golden_cross)\n",
-    "sr2 = pd.Series(-1, index=death_cross)\n",
-    "sr = pd.concat([sr1, sr2]).sort_index() # 旧版 sr1.append(sr2)"
+    "golden_crosses = pd.Series(1, index=golden_cross)\n",
+    "death_crosses = pd.Series(-1, index=death_cross)\n",
+    "crosses = pd.concat([golden_crosses, death_crosses]).sort_index() # 旧版 sr1.append(sr2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2175256.0000000056 12175256.000000006\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.21752560000000057"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -173,9 +153,9 @@
     "#     cash -= sell\n",
     "\n",
     "# 1手100股！！！！\n",
-    "for i in range(0, len(sr)):\n",
-    "  open_price = stock_record['open'][sr.index[i]]\n",
-    "  if sr.iloc[i] == 1:\n",
+    "for i in range(0, len(crosses)):\n",
+    "  open_price = stock_record['open'][crosses.index[i]]\n",
+    "  if crosses.iloc[i] == 1:\n",
     "    buy = (cash // (100 * open_price))\n",
     "    cash -= buy * 100 * open_price\n",
     "    hold += buy * 100\n",
@@ -184,13 +164,11 @@
     "    hold = 0\n",
     "\n",
     "# 可能手上还持有\n",
+    "# 最后一天的price\n",
     "price = stock_record['open'][-1]\n",
     "hold_value = price * hold\n",
-    "\n",
-    "current = cash + hold_value\n",
-    "# 1805239.0000000002\n",
-    "# 8572.0\n",
-    "print(current - origin, cash)"
+    "rate = (cash + hold_value - origin) / origin\n",
+    "rate"
    ]
   },
   {
@@ -202,6 +180,27 @@
     "收盘价算金叉死叉->开盘卖，赚很多，开盘算，就很少了\n",
     "因为用收盘，其实是预计到了后面的信息，做的判读\n",
     "2. 23333后面股价太高，一开始数值太小了股票买不起1手了"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 后面一天开盘买卖？\n",
+    "origin = 10000000\n",
+    "cash = origin\n",
+    "hold = 0\n",
+    "\n",
+    "for i in range(0, len(crosses)):\n",
+    "  date_index = crosses.index[i]\n",
+    "  \n",
+    "\n",
+    "price = stock_record['open'][-1]\n",
+    "hold_value = price * hold\n",
+    "rate = (cash + hold_value - origin) / origin\n",
+    "rate"
    ]
   }
  ],
