--- a/Python/anaconda/Porfolio.ipynb
+++ b/Python/anaconda/Porfolio.ipynb
@@ -148,7 +148,7 @@
     "print(f\"总资金: {round(port_value, 2)}\")\n",
     "print(f\"净收益: {round(pnl, 2)}\")\n",
     "\n",
-    "cerebro.plot(style='candlestick')  # 画图"
+    "# cerebro.plot(style='candlestick')  # 画图，版本不支持了"
    ]
   }
  ],
